<resources>
    <string name="app_name">WinWin</string>
    <string name="suggest">Gợi ý</string>
    <string name="book">Sách</string>
    <string name="book_store"><u>Cửa hàng sách</u></string>
    <string name="see_more"><u>Xem thêm</u></string>
    <string name="my_book">Sách của tôi</string>
    <string name="see_detail"><u>Xem chi tiết</u></string>
    <string name="book_name">Tennnnnnnnaaa sachhhhhhhhhhhbbb</string>
    <string name="book_price">Giá sách: 500.000vnd</string>
    <string name="sold">Đã bán:</string>
    <string name="book_muc_tieu">Sáchhhhhhh mụcccccccc tiêuuuuu</string>
    <string name="book_store_title">Cửa hàng sách</string>
    <string name="book_it_title">Sách công nghệ thông tin</string>
    <string name="economy_book_title">Sách kinh tế</string>
    <string name="literature_book_title">Sách văn học</string>
    <string name="educational_book_title">Sách giáo dục</string>
    <string name="book_category">{Book Category}</string>
    <string name="book_detail">Chi tiết sách</string>
    <string name="home_page">Trang chủ</string>
    <string name="games">Trò chơi</string>
    <string name="cv">Hồ sơ</string>
    <string name="qr_code_scanner">Quét mã QR</string>
    <string name="news">Tin tức</string>
    <string name="location">Vị trí</string>
    <string name="contact">Trò chuyện</string>
    <string name="foreign_language">Ngoại ngữ</string>
    <string name="featured_games">Trò chơi nổi bật</string>
    <string name="featured_news">Tin tức nổi bật</string>
    <string name="list_friends">Danh sách bạn bè</string>
    <string name="chess_game">Cờ vua</string>
    <string name="music">Nhạc</string>
    <string name="personal">Cá nhân</string>
    <string name="privacy">Quyền riêng tư</string>
    <string name="account_security">Tài khoản và Bảo mật</string>
    <string name="backup_restore">Sao lưu và khôi phục</string>
    <string name="theme">Giao diện</string>
    <string name="notification">Thông báo</string>
    <string name="change_language">Thay đổi ngôn ngữ</string>
    <string name="about_us">Thông tin về chúng tôi</string>
    <string name="switch_account">Chuyển tài khoản</string>
    <string name="logout">Đăng xuất</string>
    <string name="create_new_account">Tạo tài khoản mới</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="have_account_logout"><i>Đã có tài khoản - Đăng nhập ngay </i></string>
    <string name="password">Mật khẩu</string>
    <string name="account">Tài khoản</string>
    <string name="login_to_continue">Đăng nhập để tiếp tục</string>
    <string name="sign_up">Đăng ký</string>
    <string name="add_image">Thêm ảnh</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="name">Họ và Tên</string>
    <string name="watch_film">Xem phim</string>
    <string name="message">Tin nhắn</string>
    <string name="select_user">Chọn người dùng</string>
    <string name="type_message">Soạn tin nhắn</string>
    <string name="tv_shows_most_popular">Danh sách phim nổi bật</string>
    <string name="read_more">Đọc tiếp</string>
    <string name="read_less">Thu gọn</string>
    <string name="u2022">u2022</string>
    <string name="website">Website</string>
    <string name="episodes">Episodes</string>
    <string name="song_list">Danh sách nhạc</string>
    <string name="splash">splash</string>
    <string name="author">Author: William Giang Nguyen</string>
    <string name="welcome_start">Bắt đầu</string>
    <string name="skip"><u>Bỏ qua</u></string>
    <string name="image_welcome">image_welcome</string>

    <string name="welcome_text_1">Tìm hiểu kiến thức cùng những trang sách điện tử</string>
    <string name="welcome_text_2">Thư giãn đầu óc với tính năng nghe nhạc hấp dẫn</string>
    <string name="welcome_text_3">Quan sát thế giới qua lăng kính tính năng tin tức</string>
    <string name="back">back</string>
    <string name="summary_content">Tóm tắt nội dung</string>
    <string name="book_information">Thông tin sách</string>
    <string name="comment">Bình luận</string>
    <string name="search">search</string>
    <string name="menu">menu</string>
    <string name="active">{Đang hoạt động}</string>
    <string name="expand">expand</string>
    <string name="settings">settings</string>
    <string name="update_info_display">Cập nhật thông tin hiển thị</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="privacy_setting">Thiết lập bảo mật</string>
    <string name="save">LƯU</string>
    <string name="input_keyword">Nhập từ khoá</string>
</resources>