<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.features.account.update_account_info.UpdateAccountInfoFragment">

    <FrameLayout
        android:id="@+id/flChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:paddingVertical="@dimen/_3sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/expand"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/_8sdp"
            android:contentDescription="@string/expand"
            android:src="@drawable/ic_select_option"
            app:tint="@color/white" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8ssp"
        android:layout_marginVertical="@dimen/_12sdp"
        android:visibility="visible"
        app:cardCornerRadius="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtOldPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_6sdp"
                android:background="@drawable/background_input"
                android:hint="@string/current_password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_4sdp"
                android:textSize="@dimen/_11ssp" />

            <EditText
                android:id="@+id/edtNewPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_6sdp"
                android:background="@drawable/background_input"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_4sdp"
                android:textSize="@dimen/_11ssp" />

            <EditText
                android:id="@+id/edtConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_6sdp"
                android:background="@drawable/background_input"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_4sdp"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>